# giFT-0.11.5

./: Make.msvc  Makefile.in  aclocal.m4  configure  configure.ac  gift-setup.in  gift.spec
data/: Makefile.in
doc/: Makefile.in  doc-html.xsl  faq.dbk  faq.html  install-unix.html  install-win32.dbk  install-win32.html  interface.html
etc/: Makefile.in  giftd.conf.template
etc/ui/: Makefile.in
lib/: ChangeLog  Makefile.in  conf.c  event.c  file.c  file.h  giftconfig.h  giftconfig.h.in  log.c  network.c  platform.h  strobj.c
m4/: Makefile.in
plugin/: ChangeLog  Makefile.in  protocol_ver.h  share_hash.c
src/: ChangeLog  Makefile.in  Makefile.msvc  daemon.c  download.c  download_state.c  giftd.c  if_message.c  meta.c  plugin.c  share_cache.c  share_db.c  transfer.c  transfer.h  upload.c  upload.h
src/meta/: Makefile.am  Makefile.in
win32/: Makefile.in  config.h  gift.nsi  nsisprep.pl
win32/giFTsetup/: Makefile.in
win32/giFTtray/: Makefile.in
